fix: footer__contacts-phones flex-basis bug on mobile layout

--- a/blocks/footer/__contacts-phones/footer__contacts-phones.css
+++ b/blocks/footer/__contacts-phones/footer__contacts-phones.css
@@ -13,6 +13,7 @@
 @media screen and (max-width: 767px) {
   .footer__contacts-phones {
     display: flex;
+    flex-basis: unset;
     flex-direction: row;
     gap: 16px;
     padding-top: 27px;
